<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="besteburhan.artibir.MainActivity">


    <ImageView
        android:id="@+id/imageViewLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.98"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/editTextEMail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:textStyle="normal"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="15dp"
            android:elevation="10dp"
            android:onClick="onClick"
            android:background="@drawable/mybutton"
            />

        <TextView
            android:id="@+id/textViewForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotten_password"
            android:gravity="center"/>


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybutton_sign_up"
            android:text="@string/sign_up"
            android:onClick="onClick"
            android:textStyle="bold"/>
        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="Facebook ile Giriş Yap"
            facebook:com_facebook_logout_text="Facebook ile Giriş Yap"
            android:id="@+id/facebook_login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />




    </LinearLayout>


</FrameLayout>
